fix sidebar.html align

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -251,6 +251,17 @@ body{
     top: 2em;
     left: -15em;
 }
+.item-title{
+    white-space: nowrap; /* 텍스트 줄바꿈 금지 */
+    overflow: hidden; /* 내용이 넘치는 경우 숨김 처리 */
+    text-overflow: ellipsis; /* 넘치는 내용을 생략 부호로 표시 (...) */
+    max-width: 80%; /* 요소의 최대 너비 설정 */
+    font-size: .7em;
+}
+
+
+
+
 
 
 /*create page*/
